Pushing up newest package.json updates

--- a/client/index.html
+++ b/client/index.html
@@ -8,14 +8,11 @@
 
     <!-- dependencies -->
     <script src="bower_components/underscore/underscore.js"></script>
-    <script src="bower_components/backbone/backbone.js"></script>
-    <script src="../node_modules/xss-filters/dist/xss-filters.min.js"></script>
+    <script src="bower_components/xss-filters/dist/xss-filters.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <!-- your scripts -->
     <script src="env/config.js"></script>
     <script src="scripts/listeners.js"></script>
-
-     <!--  <script src="scripts/app-backbone.js"></script> -->
     <script src="scripts/app.js"></script>
   </head>
   <body>
